# trip-planner-ai-agent-using-crewai

./: LICENSE  README.md  pyproject.toml
src/: main.py
src/output/: final_itinerary.md
src/trip_palnner/: crew.py
src/trip_palnner/config/: agents.yaml  tasks.yaml  tools.yaml
src/trip_palnner/tools/: browser_tools.py  calculator_tools.py
src/trip_planner/: crew.py
src/trip_planner/config/: agents.yaml  flow.yaml  tasks.yaml  tools.yaml
src/trip_planner/tools/: browser_tools.py
travel_agent_flow/: README.md  pyproject.toml
travel_agent_flow/src/travel_agent/: main.py
travel_agent_flow/src/travel_agent/crews/travel_crew/: travel_crew.py
travel_agent_flow/src/travel_agent/crews/travel_crew/config/: agents.yaml  tasks.yaml
travel_agent_flow/src/travel_agent/tools/: browser_tools.py  search_tools.py
