[project]
name = "trip-planner"
version = "0.1.0"
description = "trip-planner using crewAI"
authors = [{ name = "Kaushal Prajapati", email = "kaushalprajapati5296@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0",
    "unstructured>=0.11.0",
    "pyowm>=3.3.0",
    "langchain",
    "langchain-community",
    "langchain-core",
    "langchain-groq",
    "requests>=2",
]

[project.scripts]
kickoff = "main:kickoff"
plot = "main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["trip_planner"]

[tool.crewai]
type = "flow"
